Pascal/test/cohadar/pascal/errors/not_an_array.pas
program test;
var a: integer;

begin
	a[7] := 3;
end.